k8s/apps/walnuts-dev/http-route-www.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns-cloudflare.alpha.kubernetes.io/cloudflare-proxied: "true"
  name: walnuts-dev-www
  namespace: walnuts-dev
spec:
  hostnames:
    - www.walnuts.dev
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  rules:
    - filters:
        - requestRedirect:
            hostname: walnuts.dev
            scheme: https
            statusCode: 301
          type: RequestRedirect
