k8s/apps/walnuts-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    labels:
        app: walnuts-dev
        app.kubernetes.io/name: walnuts-dev
    name: walnuts-dev
    namespace: walnuts-dev
spec:
    ingressClassName: cilium
    rules:
        - host: walnuts.dev
          http:
            paths:
                - backend:
                    service:
                        name: walnuts-dev
                        port:
                            number: 3000
                  path: /
                  pathType: Prefix

---
