k8s/apps/walnuts-dev/network-policy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: walnuts-dev-ingress
  namespace: walnuts-dev
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
          podSelector:
            matchLabels:
              app.kubernetes.io/component: proxy
              app.kubernetes.io/managed-by: envoy-gateway
              app.kubernetes.io/name: envoy
      ports:
        - port: 3000
          protocol: TCP
  podSelector:
    matchLabels:
      app: walnuts-dev
      app.kubernetes.io/name: walnuts-dev
  policyTypes:
    - Ingress
